// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`start servers CLI options accepts boolean value for updateBaselines 1`] = `
"
functional_tests_server: invalid option [updateBaselines]
    ...stack trace...
"
`;

exports[`start servers CLI options rejects bail 1`] = `
"
functional_tests_server: invalid option [bail]
    ...stack trace...
"
`;

exports[`start servers CLI options rejects boolean config value 1`] = `
"
functional_tests_server: invalid argument [true] to option [config]
    ...stack trace...
"
`;

exports[`start servers CLI options rejects boolean value for opensearch-dashboards-install-dir 1`] = `
"
functional_tests_server: invalid argument [true] to option [opensearch-dashboards-install-dir]
    ...stack trace...
"
`;

exports[`start servers CLI options rejects empty config value if no default passed 1`] = `
"
functional_tests_server: config is required
    ...stack trace...
"
`;

exports[`start servers CLI options rejects invalid options even if valid options exist 1`] = `
"
functional_tests_server: invalid option [grep]
    ...stack trace...
"
`;
